# MULTI_PDF_RAG_10_09

./: .gitignore  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  main.py  requirements.txt  tasks.py
backend/logger/: logger_config.py
backend/src/: document_processor.py  llm.py  qa_handler.py  retriever_handler.py  vector_store.py
frontend/: Dockerfile  app.py  config.py
src/: document_processor.py
